// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnitSelector matches the snapshot 1`] = `
<div>
  <div>
    <div
      class="d-flex mx-auto"
    >
      <select
        aria-label="Unit name"
        class="rounded px-2 mx-auto"
        id="my-unit-selector-nameSelect"
      >
        <option
          value="DF-90 Mortar Trooper"
        >
          DF-90 Mortar Trooper
        </option>
        <option
          value="Shoretroopers"
        >
          Shoretroopers
        </option>
        <option
          value="Snowtroopers"
        >
          Snowtroopers
        </option>
        <option
          value="Stormtroopers"
        >
          Stormtroopers
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`UnitSelector matches the snapshot when multiple units have same name 1`] = `
<div>
  <div>
    <div
      class="d-flex mx-auto"
    >
      <select
        aria-label="Unit name"
        class="rounded px-2 mx-auto"
        id="my-unit-selector-nameSelect"
      >
        <option
          value="ARC Troopers"
        >
          ARC Troopers
        </option>
        <option
          value="Wookiee Warriors"
        >
          Wookiee Warriors
        </option>
      </select>
    </div>
    <div
      class="d-flex mx-auto mt-2"
    >
      <select
        aria-label="Unit subtitle"
        class="rounded px-2 mx-auto"
        id="my-unit-selector-subtitleSelect"
      >
        <option />
        <option
          value="Strike Team"
        >
          Strike Team
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`UnitSelector matches the snapshot with subtitle 1`] = `
<div>
  <div>
    <div
      class="d-flex mx-auto"
    >
      <select
        aria-label="Unit name"
        class="rounded px-2 mx-auto"
        id="my-unit-selector-nameSelect"
      >
        <option
          value="Chewbacca"
        >
          Chewbacca
        </option>
        <option
          value="K-2SO"
        >
          K-2SO
        </option>
        <option
          value="Luke Skywalker"
        >
          Luke Skywalker
        </option>
        <option
          value="R2-D2"
        >
          R2-D2
        </option>
        <option
          value="Sabine Wren"
        >
          Sabine Wren
        </option>
      </select>
    </div>
    <div
      class="text-center mt-2 mx-auto"
    >
      Jedi Knight
    </div>
  </div>
</div>
`;
